--- a/src/main/res/layout/activity_km.xml
+++ b/src/main/res/layout/activity_km.xml
@@ -96,10 +96,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:width="100dp"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:gravity="end|center_vertical"
-                android:inputType="number">
-
-                <requestFocus />
+                android:inputType="number"
+                android:textIsSelectable="false">
             </EditText>
 
         </LinearLayout>
@@ -161,6 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/valider" />
+        <requestFocus />
 
     </LinearLayout>
 </LinearLayout>
