--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -153,16 +153,23 @@
         android:orientation="horizontal"
         android:baselineAligned="false">
 
-        <ImageButton
-            android:id="@+id/cmdTransfert"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
             android:layout_weight="0.25"
-            android:background="@null"
-            android:contentDescription="@string/icone_transfert"
-            android:scaleType="fitCenter"
-            android:src="@drawable/transfert" />
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/cmdTransfert"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="0"
+                android:background="@null"
+                android:contentDescription="@string/icone_transfert"
+                android:scaleType="fitCenter"
+                android:src="@drawable/transfert" />
+        </LinearLayout>
 
     </LinearLayout>
 
