--- a/src/main/res/layout/activity_hf_recap.xml
+++ b/src/main/res/layout/activity_hf_recap.xml
@@ -52,7 +52,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="@string/title_frais_hf"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/colorPrimary" />
         </LinearLayout>
 
     </LinearLayout>
