--- a/src/main/res/layout/activity_hf.xml
+++ b/src/main/res/layout/activity_hf.xml
@@ -47,10 +47,10 @@
                 android:autoSizeTextType="uniform"
                 android:gravity="start|center"
                 android:lines="1"
-                android:paddingRight="10dp"
                 android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/title_frais_hf"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/colorPrimary" />
         </LinearLayout>
 
     </LinearLayout>
