--- a/src/main/res/layout/activity_synchroniser.xml
+++ b/src/main/res/layout/activity_synchroniser.xml
@@ -20,8 +20,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
             android:baselineAligned="false"
             android:orientation="horizontal"
             android:padding="5dp"
@@ -71,14 +71,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_weight="0"
-            android:orientation="vertical"></LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -87,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="0"
+                android:gravity="center"
                 android:labelFor="@+id/txtidentifiantARemplir"
                 android:paddingTop="15dp"
                 android:paddingBottom="15dp"
@@ -103,9 +99,11 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:gravity="top|start"
+                android:gravity="center"
                 android:inputType="text"
-                android:lines="2">
+                android:lines="2"
+                android:textAlignment="center"
+                android:textCursorDrawable="@android:color/black">
 
             </EditText>
 
@@ -113,13 +111,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:orientation="vertical"></LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -144,28 +138,24 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:gravity="top|start"
+                android:gravity="center"
                 android:inputType="text"
-                android:lines="2">
+                android:lines="2"
+                android:textAlignment="center">
 
             </EditText>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_weight="0"
-            android:orientation="vertical"></LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
+            android:layout_height="0dp"
+            android:layout_weight="0.25"
+            android:gravity="center"
             android:orientation="vertical">
 
             <Button
                 android:id="@+id/cmdsynchroniser"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:text="@string/synch"
