--- a/src/main/res/layout/layout_liste.xml
+++ b/src/main/res/layout/layout_liste.xml
@@ -61,8 +61,8 @@
         android:layout_gravity="center"
         android:layout_margin="2dp"
         android:layout_weight="1"
-        android:background="@color/colorAccent"
-        app:srcCompat="@drawable/ic_clear_white_24dp"
-        android:contentDescription="@string/icone_supp_hf" />
+        android:background="@color/colorPrimary"
+        android:contentDescription="@string/icone_supp_hf"
+        app:srcCompat="@drawable/ic_clear_white_24dp" />
 
 </LinearLayout>
